# figma-discord-rp

./: Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: figma.rs  logging.rs  main.rs  settings.rs  settings_window.rs  tray.rs
src/updater/: core.rs  download.rs  install.rs  mod.rs  splash.rs
