[package]
name = "figma-discord-rp"
version = "1.0.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.1"
anyhow = "1.0.101"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
dotenvy_macro = "0.15"
eframe = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
muda = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tray-icon = "0.19"
winit = "0.30"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
