[package]
name = "figma-discord-rp"
version = "1.2.1"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.1"
anyhow = "1.0.101"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
image = { version = "0.25", default-features = false, features = ["png"] }
muda = { version = "0.15", default-features = false }
sentry = { version = "0.46.2", features = ["anyhow"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
tray-icon = { version = "0.19", default-features = false }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
ureq = { version = "2", features = ["json"] }
semver = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
indicatif = "0.17"
open = "5"
thiserror = "2"
chrono = "0.4"
owo-colors = "4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
